--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "jsx": "react-jsx",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -17,8 +18,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "rootDir": "src" 
-  }
+    "noEmit": true
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
