Fix eslint use before define issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,13 +37,11 @@
     }
   ],
   "rules": {
-    "jest/lowercase-name": 0,
-    "no-use-before-define": [
-      "error",
-      {
-        "variables": false
-      }
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": [
+      "error"
     ],
+    "jest/lowercase-name": 0,
     "react/react-in-jsx-scope": "off",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "off",
